%% ============================================
%% ooad-phase:   物件設計
%% chapter:      6-2
%% realizes:     UC-01, UC-02, UC-03
%% source:       docs/00_Deliverables/System_Manual/chapters/05_需求模型.md（表5-4-1 分析責任）
%% verified:     2026-09-21
%% status:       draft
%% implemented:  partial
%% ai-assisted:  yes / Claude Opus 5 / 依 2026-09-21 決議改用 Mermaid 重繪；classDiagram 以 foreignObject 呈現屬性／方法，需以 kroki /mermaid/png 直接轉檔，不可用 svg+sharp（sharp 內建 resvg 不支援 foreignObject，會產生空白方框）
%% ============================================
%%{init: {'theme':'neutral'}}%%
classDiagram
    direction LR
    class AuthService {
        +register()
        +login()
        +updateProfile()
    }
    class CourseService {
        +createCourse()
        +updateCourse()
        +markVideoWatched()
    }
    class EnrollmentService {
        +assignStudent()
        +importStudents()
        +revokeStudent()
    }
    class VideoBatchService {
        +createVideoBatch()
        +retryItem()
    }
    class VideoProcessingService {
        +startProcessing()
        +completeProcessing()
        +failProcessing()
    }
    class User {
        +role
        +isActive
    }
    class Course {
        +title
        +status
    }
    class Enrollment {
        +status
        +progress
    }
    class Video {
        +sourceType
        +processingStatus
    }
    class VideoBatch {
        +status
        +items
    }

    AuthService --> User
    CourseService --> Course
    EnrollmentService --> Enrollment
    VideoBatchService --> VideoBatch
    VideoProcessingService --> Video
    User "1" --> "0..*" Course : 教師建立
    Course "1" --> "0..*" Enrollment : 修課
    User "1" --> "0..*" Enrollment : 學生選課
    Course "1" --> "0..*" Video : 掛載
    VideoBatch "1" --> "0..*" Video : 批次項目
